fix: arrow direction on Collapse

--- a/kasa/src/components/Collapse/CollapseStyle.scss
+++ b/kasa/src/components/Collapse/CollapseStyle.scss
@@ -1,7 +1,4 @@
 
-.collapse {
-    
-  }
 .collapse-toggle {
     width: 100%;
     background: #FF6060;
